--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!-- This is the feature 1 -->
 <!DOCTYPE html>
 <head>
 <title>
@@ -5,6 +6,6 @@
 </title>
 </head>
 <body>
-feature1 branch body
+
 </body>
 </html>
